langkit/sustained/src/gpr_parser-implementation-c.ads


   function gpr_builtin_function_call_f_function_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_builtin_function_call_f_function_name";
   

           
   

   
   

   function gpr_builtin_function_call_f_parameters
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_builtin_function_call_f_parameters";
   

           
   

   
   

   function gpr_case_construction_f_var_ref
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_case_construction_f_var_ref";
   

           
   

   
   

   function gpr_case_construction_f_items
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_case_construction_f_items";
   

           
   

   
   

   function gpr_case_item_f_choice
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_case_item_f_choice";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Others_Designator`, :ada:ref:`String_Literal`

           
   

   
   

   function gpr_case_item_f_decls
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_case_item_f_decls";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Attribute_Decl`, :ada:ref:`Case_Construction`,
   --  :ada:ref:`Empty_Decl`, :ada:ref:`Variable_Decl`

           
   

   
   

   function gpr_compilation_unit_f_project
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_compilation_unit_f_project";
   

           
   

   
   

   function gpr_prefix_f_prefix
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_prefix_f_prefix";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Identifier`, :ada:ref:`Prefix`

           
   

   
   

   function gpr_prefix_f_suffix
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_prefix_f_suffix";
   

           
   

   
   

   function gpr_limited_node_p_as_bool
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_limited_node_p_as_bool";
   --  Return whether this is an instance of LimitedPresent

           
   

   
   

   function gpr_package_decl_f_pkg_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_package_decl_f_pkg_name";
   

           
   

   
   

   function gpr_package_decl_f_pkg_spec
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_package_decl_f_pkg_spec";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Package_Renaming`, :ada:ref:`Package_Spec`

           
   

   
   

   function gpr_package_extension_f_extended_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_package_extension_f_extended_name";
   

           
   

   
   

   function gpr_package_renaming_f_renamed_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_package_renaming_f_renamed_name";
   

           
   

   
   

   function gpr_package_spec_f_extension
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_package_spec_f_extension";
   

           
   

   
   

   function gpr_package_spec_f_decls
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_package_spec_f_decls";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Attribute_Decl`, :ada:ref:`Case_Construction`,
   --  :ada:ref:`Empty_Decl`, :ada:ref:`Variable_Decl`

           
   

   
   

   function gpr_package_spec_f_end_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_package_spec_f_end_name";
   

           
   

   
   

   function gpr_private_node_p_as_bool
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_private_node_p_as_bool";
   --  Return whether this is an instance of PrivatePresent

           
   

   
   

   function gpr_project_f_context_clauses
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_f_context_clauses";
   

           
   

   
   

   function gpr_project_f_project_decl
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_f_project_decl";
   

           
   

   
   

   function gpr_project_declaration_f_qualifier
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_declaration_f_qualifier";
   

           
   

   
   

   function gpr_project_declaration_f_project_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_declaration_f_project_name";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Identifier`, :ada:ref:`Prefix`

           
   

   
   

   function gpr_project_declaration_f_extension
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_declaration_f_extension";
   

           
   

   
   

   function gpr_project_declaration_f_decls
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_declaration_f_decls";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Attribute_Decl`, :ada:ref:`Case_Construction`,
   --  :ada:ref:`Empty_Decl`, :ada:ref:`Package_Decl`,
   --  :ada:ref:`Typed_String_Decl`, :ada:ref:`Variable_Decl`

           
   

   
   

   function gpr_project_declaration_f_end_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_declaration_f_end_name";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Identifier`, :ada:ref:`Prefix`

           
   

   
   

   function gpr_project_extension_f_is_all
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_extension_f_is_all";
   

           
   

   
   

   function gpr_project_extension_f_path_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_extension_f_path_name";
   

           
   

   
   

   function gpr_string_literal_at_f_str_lit
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_string_literal_at_f_str_lit";
   

           
   

   
   

   function gpr_string_literal_at_f_at_lit
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_string_literal_at_f_at_lit";
   

           
   

   
   

   function gpr_terms_f_terms
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_terms_f_terms";
   

           
   

   
   

   function gpr_type_reference_f_var_type_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_type_reference_f_var_type_name";
   

           
   

   
   

   function gpr_typed_string_decl_f_type_id
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_typed_string_decl_f_type_id";
   

           
   

   
   

   function gpr_typed_string_decl_f_string_literals
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_typed_string_decl_f_string_literals";
   

           
   

   
   

   function gpr_variable_decl_f_var_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_decl_f_var_name";
   

           
   

   
   

   function gpr_variable_decl_f_var_type
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_decl_f_var_type";
   

           
   

   
   

   function gpr_variable_decl_f_expr
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_decl_f_expr";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Builtin_Function_Call`, :ada:ref:`String_Literal_At`,
   --  :ada:ref:`Terms`, :ada:ref:`Variable_Reference`

           
   

   
   

   function gpr_variable_reference_f_variable_name
     (Node : gpr_base_entity_Ptr;

